@startuml State_VongDoi_ChungTuKho
title Vong doi chung tu kho thuc te
[*] --> Draft : tao phieu
Draft --> Draft : sua dong hang / serial
Draft --> Posted : ghi so truc tiep
Draft --> Cancelled : huy phieu nhap
Posted --> Locked : khoa sau khi doi soat
Posted --> ReversalCreated : tao phieu dao nghiep vu
ReversalCreated --> Posted : ghi so phieu dao
Locked --> [*]
Cancelled --> [*]
note right of Posted
  Khi ghi so, InventoryPostingService cap nhat:
  - StockBalance
  - ProductSerial
  - StockLedger
  - AuditLog
end note
@enduml
